style(Kelly image): fix cut off on sectionHero of Home page

--- a/src/components/SectionHero.module.css
+++ b/src/components/SectionHero.module.css
@@ -1,12 +1,12 @@
 .imageIcon {
   position: absolute;
-  top: 50%; 
-  left: 53%; 
-  width: 100%; 
-  height: 900px; 
-  object-fit: cover; 
+  top: 50%;
+  left: 53%;
+  width: 100%;
+  height: 900px;
+  object-fit: contain;
   mix-blend-mode: lighten;
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
   max-width: 100%;
 }
 
@@ -64,7 +64,7 @@
   display: block;
   padding: 0 10px;
   box-sizing: border-box;
-  
+
   text-overflow: ellipsis;
 }
 
@@ -77,14 +77,14 @@
   text-align: center;
   width: 100%;
   max-width: 870px;
-  
+
   white-space: normal;
   word-break: break-word;
   overflow-wrap: break-word;
-  
-  height: auto !important; 
+
+  height: auto !important;
   min-height: fit-content;
-  
+
   overflow: visible !important;
 }
 
